--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <main>
-        <img src="imagens/frame-iphone.png" alt="">
+        <section id="tela">
+
+        </section>
+        <section class="sociais">
+            <a href="#"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+        </section>
     </main>
 </body>
 </html>
