--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <body>
     <main>
         <section id="tela">
+            <iframe name="tela" id="tela" src="pag001.html" frameborder="0"></iframe>
 
         </section>
-        <section class="sociais">
-            <a href="#"><img src="imagens/logo-home.jpg" alt=""></a> <br>
-            <a href="#"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
-            <a href="#"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
-            <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
-            <a href="#"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
-        </section>
+        
+            <section class="sociais">
+                <a href="index.html"><img src="imagens/logo-home.jpg" alt="">
+                </a><br>    
+                <a href="instgram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+                <a href="#"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+                <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+                <a href="#"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            </section>
     </main>
 </body>
 </html>
