--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
             <iframe name="tela" src="home.html" id="tela" frameborder="0"></iframe>
         </section>
         <section id="nav">
+            
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
 
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+
+            
         </section>
     </main>
 </body>
