--- a/insta.html
+++ b/insta.html
@@ -17,9 +17,29 @@
         img{
             width: 100vw;
         }
+        p{
+            background-color: orange;
+            padding: 10px;
+            text-align: center;
+        }
+        p:hover{
+            background-color: green;
+        }
+        a{
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            color: black;
+            font-weight: bold;
+        }
+        a:hover{
+            color: white;
+        }
+           
+        
     </style>
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="">
+    <p><a href="https://instagram.com/" target="_blank">Acessar</a></p>
 </body>
 </html>
